Fix issues with navbar not expanding and collapsing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,9 +53,9 @@ body .navbar-nav {
 /* ---------- Navbar ---------- */
 
 .navbar {
-    width: 100%;
+    width: 100vw;
+    position: relative;
     background-color: var(--blue) !important;
-    z-index: 2;
     text-align: center;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.6);
 }
@@ -119,6 +119,16 @@ body .navbar-nav {
     to {
         transform: scale(1.05);
     }
+}
+
+#newsletter-button {
+    background-color: #fff;
+    color: var(--blue);
+}
+
+#newsletter-button:hover {
+    background-color: var(--blue);
+    color: #fff;
 }
 
 
